--- a/package.json
+++ b/package.json
@@ -30,13 +30,14 @@
     "scripts": {
         "prebuild": "rimraf ./build",
         "build": "npx typedoc",
-        "lint": "eslint './src/**/*.{ts,tsx}'",
+        "lint": "eslint . --ext .ts",
         "upload": "node ../../scripts/s3upload.js core",
         "prelib": "rimraf ./lib",
         "lib": "tsc --declaration",
         "ts-check": "tsc --noEmit",
         "format:check": "prettier --check \"./src/**/*.{ts,tsx,scss}\"",
-        "format": "prettier --write \"./src/**/*.{ts,tsx,scss}\""
+        "format": "prettier --write \"./src/**/*.{ts,tsx,scss}\"",
+        "release": "standard-version"
     },
     "bugs": {
         "url": "https://github.com/rishabhgupta/webpack-logrocket-plugin/issues"
@@ -51,7 +52,7 @@
         "@types/node": "^17.0.23",
         "@typescript-eslint/eslint-plugin": "^5.19.0",
         "@typescript-eslint/parser": "^5.19.0",
-        "eslint": "^5.16.0",
+        "eslint": "^7.6.0",
         "prettier": "2.0.5",
         "rimraf": "^2.6.3",
         "standard-version": "^9.3.2",
